#26508 we should continue even if we fail crearting a lang